--- a/locales/es.json
+++ b/locales/es.json
@@ -79,6 +79,7 @@
     "notSelectableCell": "no incluído",
     "clickToSelectCell": "clic para seleccionar",
     "clickToDeselectCell": "deseleccionar x",
-    "draftIncludesList": "Incluye __includeList__"
+    "draftIncludesList": "Incluye __includeList__",
+    "dropdownOptionView": "Ver"
   }
 }
