--- a/locales/en.json
+++ b/locales/en.json
@@ -43,6 +43,7 @@
     "alreadySelectedDocumentType": "You can't select two documents of the same type - deselect it first.",
     "alreadySelectedPack": "Seleccionaste una opción vinculada a otros documentos más. No es posible seleccionarlo de forma aislada.",
     "cantSelectPack": "Intentaste seleccionar una opción vinculada que no puede seleccionar de forma aislada, y ya tienes otra seleccionada.",
+    "tooManyUserUpdates": "No se pudo registrar el voto, debido a que lo has cambiado demasiadas veces en esta votación. Por tanto, el último voto que hayas emitido es el que queda registrado.",
 
     "removeSelectedItem": "deselect",
 
