--- a/locales/es.json
+++ b/locales/es.json
@@ -41,7 +41,7 @@
     "maxSelectedLimitReached": "No puedes seleccionar más opciones (máximo __max__). Para seleccionar una opción, deselecciona otra primero.",
     "alreadySelectedDocumentType": "No puedes seleccionar dos documentos del mismo tipo, deselecciónalo primero antes.",
     "alreadySelectedPack": "Seleccionaste una opción vinculada a otros documentos más. No es posible seleccionarlo de forma aislada.",
-    "cantSelectPack": "Intentaste seleccionar una opción vinculada que no puede seleccionar de forma aislada, y ya tienes otra seleccionada.",
+    "cantSelectPack": "Intentaste seleccionar una opción vinculada que no se puede seleccionar de forma aislada, y ya tienes otra seleccionada.",
 
     "removeSelectedItem": "deseleccionar",
 
