starting work on pcandidates election screen

--- a/locales/en.json
+++ b/locales/en.json
@@ -81,6 +81,8 @@
     "clickToSelectCell": "click to select",
     "clickToDeselectCell": "deselect x",
     "draftIncludesList": "Includes __includeList__",
-    "dropdownOptionView": "View"
+    "dropdownOptionView": "View",
+
+    "filterOptionsPlaceholder2": "Search name or candidate.."
   }
 }
