--- a/locales/es.json
+++ b/locales/es.json
@@ -87,6 +87,8 @@
     "candidatesTitle": "Candidaturas",
     "helpTextViewSingleCandidates": "Clic en Ver para seleccionar candidatos individuales",
     "helpTextViewCell": "Clic en una celda para seleccionarla completa",
-    "randomizeColumn": "Ordenar aleatoriomente"
+    "randomizeColumn": "Ordenar aleatoriomente",
+    "firstCandidateOfMany": "__name__ y otros",
+    "numCandidatesSelected": "(__selected__ de __total__ seleccionados)"
   }
 }
