--- a/locales/es.json
+++ b/locales/es.json
@@ -83,7 +83,7 @@
     "draftIncludesList": "Incluye __includeList__",
     "dropdownOptionView": "Ver",
 
-    "filterOptionsPlaceholder2": "Buscar nombre o candidatura..",
+    "filterOptionsPlaceholder2": "Buscar nombre o lista",
     "candidatesTitle": "Candidaturas",
     "helpTextViewSingleCandidates": "Clic en Ver para seleccionar candidatos individuales",
     "helpTextViewCell": "Clic en una celda para seleccionarla completa",
