--- a/locales/en.json
+++ b/locales/en.json
@@ -13,9 +13,10 @@
     "selectOptionsText": "Answer to the election questions one by one as they are shown. This way you will configure your preferences in your ballot.",
     "reviewOptionsTitle": "2. Review your ballot",
     "reviewOptionsText": "We will show a summary with the content of your ballot so that you can review it. You'll still be able to change your answers if you want",
-    "encryptAndEmitBallotTitle": "3. Cast your vote",
-    "encryptAndEmitBallotText": "When you proceeed to cast your vote, the voting booth will take some seconds to encrypt it. This way the secrecy of the vote will be preserved. Once the is cast you'll receive a tracker id, that you can use to verify that your ballot was correctly registered.",
-
+    "encryptAndEmitBallotTitle": "3. Encrypt your ballot",
+    "encryptAndEmitBallotText": "Once you have chosen your preferences, you can proceed to encrypt them so that the secrecy of the vote is preserved. The voting booth will take some seconds to perform the encryption. Once the is cast you'll receive a tracker id, that you can use to verify that your ballot cannot be altered.",
+    "emitBallotTitle": "4. Cast your ballot",
+    "emitBallotText": "Once your ballot is encrypted, you can cast it so that it's properly registered. Alternatively, you can audit that your ballot was correctly encrypted. If you choose to audit your ballot then it will be spoiled, so to cast a vote you'll have to start the process again.",
     "errorTitle": "Oops. Something unexpected happened",
     "errorHtml": "<p>Ocurrió el siguiente problema (identificador __errorId__): </p><p>__error__</p><p>En caso de que creas que debes contactar con nosotros, puedes hacerlo enviándonos un email a <a href=\"mailto:__email__\" target=\"_blank\">__email__</a>.</p>",
     "errorLoadingElection": "Error cargando la votación. Esto puede ocurrir por múltiples motivos: lo más probable es que debido a motivos de seguridad este enlace haya expirado, por lo que te recomendamos que simplemente cierres este enlace y comiences desde el principio el proceso de voto. También puede que este enlace sea incorrecto, puede que lo hayas introducido o se haya generado mal. Para ello comprueba a generarlo de nuevo. Finalmente, puede ocurrir que el servidor no esté disponible temporalmente. Si se trata de este caso, prueba de nuevo más tarde y si el problema persiste ponte en contacto con nosotros.",
@@ -55,7 +56,7 @@
     "errorElectionUrl": "The introduced address has an erroneous format",
     "reviewYourBallotTitle": "Review your ballot",
     "reviewYourBallotText": "Before casting your vote, please review the content of your ballot",
-    "encryptAndCastTheBallot": "Encrypt and cast your ballot",
+    "encryptAndCastTheBallot": "Encrypt your ballot",
 
     "statusExecutingSanityChecks": "Verifying that the web browser is able to encode the ballot, please wait (__percentage__% completed)",
     "statusEncryptingQuestion": "Encrypting answers to question __questionNum__, please wait (__percentage__% completed)",
