fixing wording errors in english localization

--- a/locales/en.json
+++ b/locales/en.json
@@ -13,8 +13,8 @@
     "selectOptionsText": "Answer to the election questions one by one as they are shown. This way you will configure your preferences in your ballot.",
     "reviewOptionsTitle": "2. Review your ballot",
     "reviewOptionsText": "We will show a summary with the content of your ballot so that you can review it. You'll still be able to change your answers if you want",
-    "encryptAndEmitBallotTitle": "3. Encrypt your ballot",
-    "encryptAndEmitBallotText": "Once you have chosen your preferences, you can proceed to encrypt them so that the secrecy of the vote is preserved. The voting booth will take some seconds to perform the encryption. Once the is cast you'll receive a tracker id, that you can use to verify that your ballot cannot be altered.",
+    "encryptBallotTitle": "3. Encrypt your ballot",
+    "encryptBallotText": "Once you have chosen your preferences, you can proceed to encrypt them so that the secrecy of the vote is preserved. The voting booth will take some seconds to perform the encryption. Afterwards you'll receive a tracker id, that you can use to verify that your ballot cannot be altered.",
     "emitBallotTitle": "4. Cast your ballot",
     "emitBallotText": "Once your ballot is encrypted, you can cast it so that it's properly registered. Alternatively, you can audit that your ballot was correctly encrypted. If you choose to audit your ballot then it will be spoiled, so to cast a vote you'll have to start the process again.",
     "errorTitle": "Oops. Something unexpected happened",
