--- a/locales/en.json
+++ b/locales/en.json
@@ -94,10 +94,14 @@
     "cannotSelectAll": "Para seleccionar todos esos candidatos tienes que deseleccionar algunos primero",
     "totalsQuestionColumn": "(__selected__ of __count__ selected)",
 
-    "castOrCancelTitle": "Send the ballot",
-    "castOrCancelSubtitle": "Your ballot is encrypted, so you can now send it to the electronic ballot box to be cast. Alternatively, you can audit that it was correctly encrypted.",
     "reviewBallotHashText": "Your ballot tracker id is: <strong>__ballotHash__</strong>",
-    "auditTheBallot": "Audit the ballot"
+    "auditTheBallot": "Audit the ballot",
+
+    "auditBallotTitle": "Audit your Ballot",
+    "auditBallotSubtitle": "",
+    "auditBallotText": "<p>The ballot tracker id is: <code>__ballotHash__</code></p><p><strong>The audit of the ballot requires some technical knowledge. If you don't have it, you can simply start again the voting process clicking in the button below.</strong></p><p>To verify your ballot you need to:</p><ol><li>Copy and save to a file your ballot:<br/><div class=\"code\" ng-click=\"selectDiv($event)\">__auditableBallot__</div></li><li>Follow the steps in <a href=\"https://github.com/agoravoting/agora-core-view/blob/master/doc/BALLOT-VERIFY.md\" target=\"_blank\">this tutorial to verify that ballot was correctly encrypted</a>.</li></ol><p>For security reasons, if you audit the ballot, it needs to be spoiled. To continue the voting process, you need to start from the begining.</p>",
+    "auditStartAgain": "Start voting from the begining"
+
   },
   "avRegistration": {
     "loginHeader": "Enter",
