--- a/locales/es.json
+++ b/locales/es.json
@@ -96,7 +96,12 @@
     "castOrCancelTitle": "Enviar el voto",
     "castOrCancelSubtitle": "Tu voto está cifrado, ya puedes enviarlo a la urna electrónica para que sea debidamente registrado. Alternativamente, puedes auditar que fue correctamente cifrado.",
     "reviewBallotHashText": "El localizador de tu voto es: <strong>__ballotHash__</strong>",
-    "auditTheBallot": "Auditar la papeleta"
+    "auditTheBallot": "Auditar la papeleta",
+
+    "auditBallotTitle": "Auditar la papeleta",
+    "auditBallotSubtitle": "",
+    "auditBallotText": "<p>El localizador de tu voto es: <code>__ballotHash__</code></p><p><strong>La auditoría de la papeleta requiere ciertos conocimientos técnicos. Si no los tienes, puedes simplemente comenzar de nuevo el proceso de voto haciendo clic abajo</strong>.</p><p>Para verificar tu voto, necesitas:</p><ol><li>Copiar y guardar en un fichero la papeleta:<br/><div class=\"code\" ng-click=\"selectDiv($event)\">__auditableBallot__</div></li><li>Seguir los pasos de <a href=\"https://github.com/agoravoting/agora-core-view/blob/master/doc/BALLOT-VERIFY.md\" target=\"_blank\">este tutorial para verificar que la papeleta fue cifrada correctamente</a>.</li></ol><p>Por razones de seguridad, al auditar el voto, el ha de ser desechado. Para continuar el proceso de voto, debes comenzar el proceso de nuevo.</p>",
+    "auditStartAgain": "Comenzar el proceso de voto de nuevo"
 
   },
   "avRegistration": {
