fixing usability of review ballot step in voting booth: renaming it. high tech solutions inc

--- a/locales/en.json
+++ b/locales/en.json
@@ -52,7 +52,7 @@
     "selectedOptionsFollow": "The __num__ options you chose are:",
 
     "errorElectionUrl": "The introduced address has an erroneous format",
-    "reviewYourBallotTitle": "Review your ballot",
+    "reviewYourBallotTitle": "Ballot not sent yet: review it first",
     "reviewYourBallotText": "Before casting your vote, please review the content of your ballot",
     "castTheBallot": "Cast your ballot",
 
