initial results view

--- a/locales/en.json
+++ b/locales/en.json
@@ -105,7 +105,13 @@
   },
   "avElection": {
     "resultsLoadingText": "Loading results",
-    "errorLoadingText": "Error loading results. Maybe they have not been published, you don't have permissions or maybe the election does not exist."
+    "errorLoadingText": "Error loading results. Maybe they have not been published, you don't have permissions or maybe the election does not exist.",
+
+    "resultsHeader": "__title__: Results",
+    "resultsTableCandidateHeader": "Candidature",
+    "resultsTableVotesHeader": "Votes",
+    "resultsTableVotesPercentageHeader": "",
+    "resultsTablePositionHeader": "Position"
   },
   "avRegistration": {
     "loginHeader": "Enter",
