improving the extensibility of the results directive

--- a/locales/en.json
+++ b/locales/en.json
@@ -111,7 +111,10 @@
     "resultsTableCandidateHeader": "Candidature",
     "resultsTableVotesHeader": "Votes",
     "resultsTableVotesPercentageHeader": "",
-    "resultsTablePositionHeader": "Position"
+    "resultsTablePositionHeader": "Position",
+    "resultsLastUpdated": "Last updated: __date__",
+
+    "errorLoadingQuestionTest": "Unknown question layout"
   },
   "avRegistration": {
     "loginHeader": "Enter",
