Added state for registration.

--- a/locales/en.json
+++ b/locales/en.json
@@ -139,6 +139,10 @@
 
     "validateHeader": "Validate code",
     "validateButton": "Validate",
-    "codePlaceholder": "code"
+    "codePlaceholder": "code",
+
+    "loadingRegistration": "Loading",
+    "successRegistration": "Success",
+    "errorRegistration": "Error"
   }
 }
