--- a/locales/en.json
+++ b/locales/en.json
@@ -169,6 +169,16 @@
         "description": "Description",
         "questions": "Questions",
         "newQuestion": "Add Question",
+        "saveQuestion": "Save Question",
+        "q": {
+            "titleError": "Enter a valid question title",
+            "optionsError": "Add at least one option"
+        },
+        "el": {
+            "titleError": "Enter a valid election title",
+            "descriptionError": "Enter a valid election description",
+            "questionsError": "Add at least one question"
+        },
         "qText": "Question text",
         "qVotingSystem": "Voting system",
         "qOptions": "Options",
