adding powered by to audit screen and minor usability improvements to pcandidates screen

--- a/locales/es.json
+++ b/locales/es.json
@@ -3,6 +3,7 @@
     "name": "Agora Voting"
   },
   "avBooth": {
+    "poweredBy": "Funciona con <strong><a href=\"https://agoravoting.com\" target=\"_blank\">Agora Voting</a></strong>",
     "loadingElectionTitle": "Cargando votación, un momento por favor..",
     "stepNumber": "paso %s de %s &nbsp; &nbsp; funciona con <strong><a href=\"https://agoravoting.com\" target=\"_blank\">Agora Voting</a></strong>",
     "stepAndQuestionNumber": "paso %s de %s, pregunta %s de %s",
