Showing some errors in login

--- a/locales/en.json
+++ b/locales/en.json
@@ -159,7 +159,9 @@
 
     "loadingRegistration": "Loading",
     "successRegistration": "Success",
-    "errorRegistration": "Error"
+    "errorRegistration": "Error",
+
+    "invalidCredentials": "Invalid credentials"
   },
 
   "avAdmin": {
