admin: topbar new design

--- a/locales/en.json
+++ b/locales/en.json
@@ -169,6 +169,15 @@
   },
 
   "avAdmin": {
+    "topbar": {
+        "home": "Home",
+        "features": "Features",
+        "help": "Help",
+        "freesignup": "Free sign up",
+        "login": "login",
+        "logout": "logout"
+    },
+
     "noElections": "No elections yet",
     "admin": "Admin",
     "elections": "Elections",
