--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,7 @@
 {
+  "loading": "Loading...",
+  "nomore": "No more elements",
+
   "app": {
     "name": "Agora Voting"
   },
@@ -244,46 +247,10 @@
         "billhistory": "Billing history",
         "buy": "Buy credits"
     },
-
-    "noElections": "No elections yet",
-    "admin": "Admin",
-    "elections": "Elections",
-    "newElection": "New election",
-    "layout": "Layout",
-    "questions": "Questions",
-    "start": "start",
-    "finish": "finish",
-    "edit": "edit",
-    "remove": "remove",
-    "view": "view election",
-    "results": "view results",
-    "registered": "registered",
-    "tally": "In tally",
-    "notstarted": "Not started",
-    "started": "Started",
-    "done": "Done",
-    "form": {
-        "name": "Name",
-        "description": "Description",
-        "questions": "Questions",
-        "newQuestion": "Add Question",
-        "saveQuestion": "Save Question",
-        "q": {
-            "titleError": "Enter a valid question title",
-            "optionsError": "Add at least one option",
-            "minmaxError": "Invalid minimum or maximum"
-        },
-        "el": {
-            "titleError": "Enter a valid election title",
-            "descriptionError": "Enter a valid election description",
-            "questionsError": "Add at least one question"
-        },
-        "qText": "Question text",
-        "qMin": "Minium options to select (0 allow blank vote)",
-        "qMax": "Maximum options to select",
-        "qVotingSystem": "Voting system",
-        "qOptions": "Options",
-        "save": "Save"
+    "elections": {
+        "filter": "Filter...",
+        "status": "Status",
+        "participation": "Participation"
     }
   }
 }
