--- a/locales/es.json
+++ b/locales/es.json
@@ -1,4 +1,7 @@
 {
+  "loading": "Cargando...",
+  "nomore": "No hay más elementos",
+
   "app": {
     "name": "Agora Voting"
   },
@@ -246,46 +249,10 @@
         "billhistory": "Historial de pagos",
         "buy": "Comprar créditos"
     },
-
-    "noElections": "Sin votaciones",
-    "admin": "Admin",
-    "elections": "Votaciones",
-    "newElection": "Nueva votación",
-    "layout": "Diseño",
-    "questions": "Preguntas",
-    "start": "comenzar",
-    "finish": "terminar",
-    "edit": "editar",
-    "remove": "eliminar",
-    "view": "ir a votación",
-    "results": "ver resultados",
-    "registered": "registrado",
-    "tally": "En recuento",
-    "notstarted": "No comenzada",
-    "started": "En votación",
-    "done": "Terminada",
-    "form": {
-        "name": "Nombre",
-        "description": "Descripción",
-        "questions": "Preguntas",
-        "newQuestion": "Añadir pregunta",
-        "saveQuestion": "Guardar pregunta",
-        "q": {
-            "titleError": "Introduce un título válido",
-            "optionsError": "Añade al menos una opción",
-            "minmaxError": "Mínimo o máximo inválidos"
-        },
-        "el": {
-            "titleError": "Introduce un título de votación válido",
-            "descriptionError": "Introduce una descripción de votación válida",
-            "questionsError": "Añade al menos una pregunta"
-        },
-        "qText": "Texto de la pregunta",
-        "qMin": "Mínimo de opciones a elegir (0 permite voto en blanco)",
-        "qMax": "Máximo de opciones a elegir",
-        "qVotingSystem": "Sistema de votación",
-        "qOptions": "Opciones",
-        "save": "Guardar"
+    "elections": {
+        "filter": "Filtrar...",
+        "status": "Estado",
+        "participation": "Participación"
     }
   }
 }
